# med_kit

./: .env.template  .gitignore  Caddyfile  Cargo.toml  Procfile  Rocket.toml  diesel.toml  package-lock.json
migrations/2021-07-11-040611_create_profiles/: up.sql
migrations/2021-07-11-152158_create_products/: down.sql  up.sql
migrations/2021-07-12-030519_create_users/: down.sql  up.sql
migrations/2021-07-19-073510_create_reports/: down.sql  up.sql
migrations/2021-07-26-124508_create_profiles/: down.sql  up.sql
src/: auth.rs  config.rs  cors.rs  database_connection.rs  db.rs  error_catchers.rs  main.rs  models.rs  product_id.rs  profile.rs  responses.rs  routes.rs  schema.rs  user.rs  user_auth.rs
src/auth/: admin_auth.rs  staff_auth.rs  user_auth.rs
src/auxiliary/: cors.rs  mod.rs  product_barcode.rs  responses.rs  uuid_param.rs  wechat_access_token.rs
src/database/: mod.rs  schema.rs
src/models/: mod.rs  products.rs  profiles.rs  reports.rs  users.rs
src/routes/: error_catchers.rs  mod.rs  product.rs  profile.rs  reports.rs  user.rs
src/user/: admin_auth.rs  mod.rs  staff_auth.rs  user_auth.rs
webapp/med_kit/: index.html  package-lock.json  package.json
webapp/med_kit/src/: AddressData.ts  App.vue  Profile.ts  Response.ts  main.ts
webapp/med_kit/src/components/: Account.vue  AddressPicker.vue  FetchProfile.vue  InitProduct.vue  ShowProfile.vue  SubmitProfile.vue  Void.vue
