[package]
name = "med_kit"
version = "0.1.0"
authors = ["Void04 <xiayuxuan@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.2"
chrono = "0.4.19"
mongodb = "1.2.0"
nanoid = "0.3.0"
serde = "1.0.123"
