[package]
name = "med_kit"
version = "0.1.0"
authors = ["Void04 <xiayuxuan@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.2"
chrono = "0.4.19"
env_logger = "0.8.3"
envfile = "0.2.1"
futures = "0.3.13"
jsonwebtoken = "7.2.0"
mongodb = "1.2.0"
nanoid = "0.3.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.123"
serde_json = "1.0.63"
sha2 = "0.9.3"
hmac = "0.10.1"
